--- a/apps/tool/templates/tool/bd_push_site.html
+++ b/apps/tool/templates/tool/bd_push_site.html
@@ -28,7 +28,7 @@
         </li>
         <li>首先将百度站长提供的“接口调用地址”复制到下面表单中，然后将自己网站的sitemap页面的地址复制到对应表单中，点击提交按钮即可看到返回的信息</li>
         <li>想了解这个工具的原理和查看源代码，可以阅读文章
-            <a class="text-info" href="http://www.seoerzone.com/article/baidu-link-push/" target="_blank">百度主动推送工具</a>，有任何问题或建议都可以到文章底部评论留言
+            <a class="text-info" href="/article/baidu-link-push/" target="_blank">百度主动推送工具</a>，有任何问题或建议都可以到文章底部评论留言
         </li>
         <li>本工具适合新站或百度收录量比较少的老站使用，对于网站大部分链接已经被百度收录的老站建议使用
             <a class="text-info" href="{% url 'tool:baidu_push' %}">百度主动推送工具</a> 实时提交新建链接
