--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -8,19 +8,19 @@
     <div class="card-body px-0 pt-3 pb-1">
         <div class="row text-center">
             <div class="col">
-                <a href="https://github.com/Hopetree" target="_blank">
+                <a href="https://github.com/Hopetree" target="_blank" title="进入博主的Github查看博客源码">
                     <img style="max-width:40px" alt="博主的github" src="{% static 'blog/img/github.png' %}">
                     <p class="mt-2">Github</p>
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'blog:about'%}#timeline" target="_blank">
+                <a href="{% url 'blog:timeline'%}" target="_blank" title="查看网站建站历程">
                     <img style="max-width:40px" alt="网站的建站历程" src="{% static 'blog/img/blog.png' %}">
                     <p class="mt-2">Timeline</p>
                 </a>
             </div>
             <div class="col">
-                <a href="{% url 'rss'%}" target="_blank">
+                <a href="{% url 'rss'%}" target="_blank" title="订阅博客">
                     <img style="max-width:40px" alt="订阅博客RSS" src="{% static 'blog/img/rss.png' %}">
                     <p class="mt-2">RSS订阅</p>
                 </a>
