--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -28,7 +28,7 @@
         </li>
         <li>首先将百度站长提供的“接口调用地址”复制到下面表单中，然后按示例输入自己网站要提交的链接，点击提交按钮即可看到返回的信息</li>
         <li>想了解这个工具的原理和查看源代码，可以阅读文章
-            <a class="text-info" href="http://www.seoerzone.com/article/baidu-link-push/" target="_blank">百度主动推送工具</a>，有任何问题或建议都可以到文章底部评论留言
+            <a class="text-info" href="/article/baidu-link-push/" target="_blank">百度主动推送工具</a>，有任何问题或建议都可以到文章底部评论留言
         </li>
         <li>本工具适合网站大部分链接已经被百度收录的老站使用，新站建议使用
             <a class="text-info" href="{% url 'tool:baidu_push_site' %}">Sitemap主动推送</a> 可以直接批量提交整站链接
