--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -21,7 +21,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu-2.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/baidu-2.png' %}"
                              alt="百度主动推送工具">
                         <h2 class="card-title">百度主动推送工具</h2>
                     </a>
@@ -36,7 +36,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:baidu_push_site' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/map.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/map.png' %}"
                              alt="Sitemap主动推送">
                         <h2 class="card-title">Sitemap主动推送</h2>
                     </a>
@@ -51,7 +51,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:link_test' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/link-2.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/link-2.png' %}"
                              alt="友链检测工具">
                         <h2 class="card-title">友链检测工具</h2>
                     </a>
@@ -66,7 +66,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:regex' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/regex.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/regex.png' %}"
                              alt="在线正则表达式">
                         <h2 class="card-title">在线正则表达式</h2>
                     </a>
@@ -81,7 +81,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:useragent' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/chrome.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/chrome.png' %}"
                              alt="User-Agent生成器">
                         <h2 class="card-title">User-Agent生成器</h2>
                     </a>
@@ -96,7 +96,7 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:html_characters' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/html.png"
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/html.png' %}"
                              alt="HTML特殊字符对照表">
                         <h2 class="card-title">HTML特殊字符</h2>
                     </a>
