整理静态文件

--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -60,20 +60,23 @@
     </div>
 </div>
 <!--友链-->
-<div class="card border-0 rounded-0 px-3 mb-2 mb-md-3" id="friends-card">
-    <div class="card-header bg-white px-0">
-        <strong><i class="fa fa-link mr-2 f-17"></i>友情链接</strong>
-    </div>
-    <div class="card-body px-0 py-3">
-        <div class="tool-list">
-            {% get_friends as friends %}
-            {% for friend in friends %}
-            <div class="w-50 float-left text-center mb-2">
-                <div class="mx-2">
-                    <a href="{{ friend.link }}" title="{{ friend.description }}" target="_blank">{{ friend.name }}</a>
+<div class="d-none d-lg-block">
+    <div class="card border-0 rounded-0 px-3 mb-2 mb-md-3" id="friends-card">
+        <div class="card-header bg-white px-0">
+            <strong><i class="fa fa-link mr-2 f-17"></i>友情链接</strong>
+        </div>
+        <div class="card-body px-0 py-3">
+            <div class="tool-list">
+                {% get_friends as friends %}
+                {% for friend in friends %}
+                <div class="w-50 float-left text-center mb-2">
+                    <div class="mx-2">
+                        <a href="{{ friend.link }}" title="{{ friend.description }}" target="_blank">
+                            {{ friend.name }}</a>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </div>
 </div>
