--- a/apps/comment/templates/comment/comment_form.html
+++ b/apps/comment/templates/comment/comment_form.html
@@ -3,7 +3,7 @@
     {% if user.is_authenticated %}
     <div class="card-body p-2 p-md-3">
         <textarea class="form-control rounded-0" id="comment-form" name="text"
-                  placeholder="评论请使用markdown语法，支持emoji表情语法" rows="5" required></textarea>
+                  placeholder="评论请使用 markdown 语法" rows="5" required></textarea>
     </div>
     <div class="card-footer border-0 bg-white py-0 px-2 px-md-3" id="editor-footer">
         <button type="button" class="btn btn-info btn-sm float-right f-16"
