--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -45,6 +45,7 @@
                     <li>信息提醒功能，登录和退出提醒，收到评论和回复提醒，信息管理</li>
                     <li>强大的全文搜索功能，只需要输入关键词就能展现全站与之关联的文章</li>
                     <li>RSS 博客订阅功能及规范的 Sitemap 网站地图</li>
+                    <li>django-redis 支持的缓存系统，遵循缓存原则，加速网站打开速度</li>
                     <li>实用的在线工具</li>
                     <li>友情链接和推荐工具网站的展示</li>
                 </ul>
@@ -58,6 +59,7 @@
                     <li>bootstrap-admin 用于美化后台管理系统，变成响应式界面</li>
                     <li>django-allauth 等用于第三方用户登录</li>
                     <li>django-haystack 和 jieba 用于支持全文搜索</li>
+                    <li>django-redis 缓存</li>
                     <li>其他依赖查看网站源码解释</li>
                 </ul>
             </div>
