--- a/apps/tool/templates/tool/base_tool.html
+++ b/apps/tool/templates/tool/base_tool.html
@@ -2,14 +2,27 @@
 {% load static %}
 
 {% block top-file %}
-<link href="{% static 'tool/css/tool.css' %}?v=20180107.07467" rel="stylesheet">
+<link href="{% static 'tool/css/tool.css' %}?v=20180107.074679" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
 <div class="container">
     <div class="row">
         <div class="col-lg-8 f-16">
-            {% block left_content %}{% endblock %}
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb bg-white border-0 rounded-0 mb-2 py-2 f-15">
+                    <li class="breadcrumb-item">
+                        <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                        <a href="{% url 'tool:total' %}">在线工具</a>
+                    </li>
+                    <li class="breadcrumb-item active" aria-current="page">{% block tool_name %}{% endblock %}</li>
+                </ol>
+            </nav>
+            <div class="card rounded-0 border-0 p-2 p-lg-3">
+                {% block left_content %}{% endblock %}
+            </div>
         </div>
         <div class="col-lg-4 d-none d-lg-block">
             {% include 'tool/tags/tool_list.html' %}
