--- a/apps/tool/templates/tool/link_test.html
+++ b/apps/tool/templates/tool/link_test.html
@@ -7,18 +7,8 @@
 <meta name="keywords" content="友情链接查询,友链检测,在线工具,站长工具,反链查询">
 {% endblock %}
 
+{% block tool_name %}友链检测工具{% endblock %}
 {% block left_content %}
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb bg-white border-0 rounded-0 mb-3 p-2 f-15">
-        <li class="breadcrumb-item">
-            <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'tool:total' %}">在线工具</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">友链检测工具</li>
-    </ol>
-</nav>
 <div class="card-body p-0">
     <h3 class="card-title pl-2 title-info">工具说明：</h3>
     <ul>
