--- a/apps/tool/templates/tool/bd_push_site.html
+++ b/apps/tool/templates/tool/bd_push_site.html
@@ -7,18 +7,8 @@
 <meta name="keywords" content="百度主动推送,站长工具,在线工具,sitemap,自动提交,百度收录,实时提交">
 {% endblock %}
 
+{% block tool_name %}Sitemap主动推送{% endblock %}
 {% block left_content %}
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb bg-white border-0 rounded-0 mb-3 p-2 f-15">
-        <li class="breadcrumb-item">
-            <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'tool:total' %}">在线工具</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">Sitemap主动推送</li>
-    </ol>
-</nav>
 <div class="card-body p-0">
     <h3 class="card-title pl-2 title-info">工具说明：</h3>
     <ul>
