--- a/apps/tool/templates/tool/characters.html
+++ b/apps/tool/templates/tool/characters.html
@@ -7,18 +7,8 @@
     <meta name="keywords" content="HTML特殊字符,html常用字符,HTML字符对照表,在线工具">
 {% endblock %}
 
+{% block tool_name %}HTML特殊字符对照表{% endblock %}
 {% block left_content %}
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb bg-white border-0 rounded-0 mb-3 p-2 f-15">
-        <li class="breadcrumb-item">
-            <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'tool:total' %}">在线工具</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">HTML特殊字符对照表</li>
-    </ol>
-</nav>
 <div class="card-body p-0">
     <h3 class="card-title pl-2 title-info my-3">HTML常用符号对照表：</h3>
     <table class="table bg-white table-bordered text-center table-sm">
