--- a/apps/tool/templates/tool/regex.html
+++ b/apps/tool/templates/tool/regex.html
@@ -7,18 +7,8 @@
 <meta name="keywords" content="正则表达式,Python正则表达式,Regular Expression,在线工具">
 {% endblock %}
 
+{% block tool_name %}在线正则表达式{% endblock %}
 {% block left_content %}
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb bg-white border-0 rounded-0 mb-3 p-2 f-15">
-        <li class="breadcrumb-item">
-            <i class="fa fa-home mr-1"></i><a href="{% url 'blog:index' %}">首页</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a href="{% url 'tool:total' %}">在线工具</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">在线正则表达式</li>
-    </ol>
-</nav>
 <div class="card-body p-0">
     <h3 class="card-title pl-2 title-info">工具说明：</h3>
     <ul>
