--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -26,11 +26,11 @@
                 <ul class="pl-4 ml-2">
                     <li>博主是一个自学编程的非计算机专业上班族</li>
                     <li>博主在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，希望有机会成为 Python 开发者</li>
-                    <li>Python 技能加点：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫库，正则/CSS/Xpath/ 信息提取方式，写过 PYQT5
-                        的多线程应用， 使用过 Pandas 和 Numpy
+                    <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫库，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
+                        的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy
                     </li>
-                    <li>数据库技能加点：常用 MySQL 做 web 后台数据库，MongoDB 做爬虫信息存储，Redis 用作缓存，只研究了常规的 CURD 操作</li>
-                    <li>前端技能加点：熟悉 HTML 基本规范，对 CSS 常规用法了解，JS 主要使用 jQuery 库，熟悉 bootstrap 框架</li>
+                    <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
+                    <li>前端技能加点：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
                     <li>博主 Github 地址：<a href="https://github.com/Hopetree"
                                         target="_blank">https://github.com/Hopetree</a></li>
                     <li>联系邮箱：zlwork2014@163.com</li>
