--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -30,7 +30,7 @@
                         的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy
                     </li>
                     <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
-                    <li>前端技能加点：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
+                    <li>前端技能树：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
                     <li>博主 Github 地址：<a href="https://github.com/Hopetree"
                                         target="_blank">https://github.com/Hopetree</a></li>
                     <li>联系邮箱：zlwork2014@163.com</li>
