--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -17,6 +17,7 @@
                 <h2 class="font-weight-bold">关于网站</h2>
                 <hr style="margin: .1rem;dashed #333;"/>
                 <ul class="pl-4 ml-2">
+                    <li>网站已经成功续航 {{ site_date|timesince }}</li>
                     <li>本网站是一个个人博客网站，主要分享博主的编程学习心得</li>
                     <li>网站主要使用 Django + Bootstrap4 搭建，源码在博主 Github 中， 目前部署在阿里云 ECS</li>
                     <li>我的目的是让这个博客网站不仅仅是一个博客，所以会尽己所能持续扩展网站的功能</li>
@@ -40,26 +41,28 @@
                 <ul class="pl-4 ml-2">
                     <li>Django 自带的后台管理系统，方便对于文章、用户及其他动态内容的管理</li>
                     <li>文章分类、标签、浏览量统计以及规范的 SEO 设置</li>
-                    <li>用户认证系统，在 Django 自带的用户系统的基础上扩展 Oauth 认证，支持微博、Github 等第三方认证</li>
+                    <li>用户认证系统，在 Django 自带的用户系统的基础上扩展 Oauth2.0 认证，支持微博、Github 等第三方认证</li>
                     <li>文章评论系统，炫酷的输入框特效，支持 markdown 语法，二级评论结构和回复功能</li>
                     <li>信息提醒功能，登录和退出提醒，收到评论和回复提醒，信息管理</li>
                     <li>强大的全文搜索功能，只需要输入关键词就能展现全站与之关联的文章</li>
                     <li>RSS 博客订阅功能及规范的 Sitemap 网站地图</li>
                     <li>django-redis 支持的缓存系统，遵循缓存原则，加速网站打开速度</li>
-                    <li>实用的在线工具</li>
+                    <li>实用的在线工具，实现在线爬虫的接口调用</li>
                     <li>友情链接和推荐工具网站的展示</li>
+                    <li>RESTful API 风格的 API 接口</li>
                 </ul>
                 <h2 class="mt-2 font-weight-bold">网站支持</h2>
                 <hr style="margin: .1rem;dashed #333;"/>
                 <ul class="pl-4 ml-2">
                     <li>前端使用 Bootstrap4 + jQuery 支持响应式；图标使用 Font Awesome</li>
                     <li>后端 Python 3.5.2，Django 1.11.12，其他依赖查看源码中 requirements.txt</li>
-                    <li>数据库使用 MySQL</li>
+                    <li>后台数据库使用 MySQL，缓存数据库使用 Redis</li>
                     <li>网站部署使用 Nginx + uwsgi，之前使用的 Nginx + gunicorn</li>
                     <li>bootstrap-admin 用于美化后台管理系统，变成响应式界面</li>
                     <li>django-allauth 等用于第三方用户登录</li>
                     <li>django-haystack 和 jieba 用于支持全文搜索</li>
                     <li>django-redis 缓存</li>
+                    <li>使用 django restframework 支持的 RESTful 风格的 API 接口</li>
                     <li>其他依赖查看网站源码解释</li>
                 </ul>
             </div>
