--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -22,7 +22,7 @@
                 <a class="nav-link py-md-3 {% if request.path == tool_url %}active{% endif %}" href="{{ tool_url }}"><i class="fa fa-balance-scale mr-1"></i>在线工具</a>
             </li>
             <li class="nav-item mr-2">
-                <a class="nav-link py-md-3" href="/api/"><i class="fa fa-key mr-1"></i>API</a>
+                <a class="nav-link py-md-3" href="{% url 'api:api-root' %}" target="_blank"><i class="fa fa-key mr-1"></i>API</a>
             </li>
             <li class="nav-item mr-2 ">
                 {% url 'blog:about' as about_url %}
