更新依赖文件

--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -21,14 +21,15 @@
                     <li>本网站是一个个人博客网站，主要分享博主的编程学习心得</li>
                     <li>网站主要使用 Django + Bootstrap4 搭建，源码在博主 Github 中， 目前部署在阿里云 ECS</li>
                     <li>我的目的是让这个博客网站不仅仅是一个博客，所以会尽己所能持续扩展网站的功能</li>
+                    <li>请各位使用了我博客源码作为您自己的博客网站支持的同学在自己博客上线后给一个注明，指向我的 Github 博客项目的地址，谢谢！</li>
                 </ul>
                 <h2 class="mt-2 font-weight-bold">关于博主</h2>
                 <hr style="margin: .1rem;dashed #333;"/>
                 <ul class="pl-4 ml-2">
-                    <li>博主是一个自学编程的非计算机专业上班族</li>
-                    <li>博主在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，希望有机会成为 Python 开发者</li>
-                    <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫库，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
-                        的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy
+                    <li>人生苦短，我用 Python！</li>
+                    <li>博主是2015年末开始自学 Python 的，在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，希望有机会成为真正的 Python 开发者</li>
+                    <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫框架，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
+                        的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy 做数据分析
                     </li>
                     <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
                     <li>前端技能树：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
@@ -57,7 +58,7 @@
                     <li>前端使用 Bootstrap4 + jQuery 支持响应式；图标使用 Font Awesome</li>
                     <li>后端 Python 3.5.2，Django 1.11.12，其他依赖查看源码中 requirements.txt</li>
                     <li>后台数据库使用 MySQL，缓存数据库使用 Redis</li>
-                    <li>网站部署使用 Nginx + uwsgi，之前使用的 Nginx + gunicorn</li>
+                    <li>网站部署使用 Nginx + gunicorn，之前使用的 Nginx + uwsgi</li>
                     <li>bootstrap-admin 用于美化后台管理系统，变成响应式界面</li>
                     <li>django-allauth 等用于第三方用户登录</li>
                     <li>django-haystack 和 jieba 用于支持全文搜索</li>
