--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -107,6 +107,21 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
+            <div class="card">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:port_scanner' %}">
+                        <img class="w-25 float-left mr-2" src="{% static 'blog/img/port.png' %}"
+                             alt="HTML特殊字符对照表">
+                        <h2 class="card-title">端口扫描器</h2>
+                    </a>
+                    <p class="mb-0">[开发工具]</p>
+                </div>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">批量扫描网络端口，检测服务端口是否开启</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
