del port-scanner

--- a/apps/tool/templates/tool/base_tool.html
+++ b/apps/tool/templates/tool/base_tool.html
@@ -32,6 +32,6 @@
 {% endblock %}
 
 {% block end_file %}
-<script src="{% static 'tool/js/tool.js'%}?v=20180105.40757"></script>
+<script src="{% static 'tool/js/tool.js'%}?v=20180105.40757678897"></script>
 {% block end_f %}{% endblock %}
 {% endblock %}
