--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -31,6 +31,7 @@
                     <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫框架，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
                         的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy 做数据分析
                     </li>
+                    <li>Linux 技能树：ansible 自动化部署及运维、常用 shell 命令及脚本编写、docker 容器化技术</li>
                     <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
                     <li>前端技能树：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
                     <li>博主 Github 地址：<a href="https://github.com/Hopetree"
