--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -19,7 +19,7 @@
                 <ul class="pl-4 ml-2">
                     <li>网站已经成功续航 {{ site_date|timesince }}</li>
                     <li>本网站是一个个人博客网站，主要分享博主的编程学习心得</li>
-                    <li>网站主要使用 Django + Bootstrap4 搭建，源码在博主 Github 中， 目前部署在阿里云 ECS</li>
+                    <li>网站主要使用 django + mysql + redis + nginx 搭建，部署方式由最开始的虚拟化部署变成 docker 容器化，源码在博主 Github 中， 目前部署在阿里云 ECS</li>
                     <li>我的目的是让这个博客网站不仅仅是一个博客，所以会尽己所能持续扩展网站的功能</li>
                     <li>请各位使用了我博客源码作为您自己的博客网站支持的同学在自己博客上线后给一个注明，指向我的 Github 博客项目的地址，谢谢！</li>
                 </ul>
@@ -31,7 +31,7 @@
                     <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫框架，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
                         的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy 做数据分析
                     </li>
-                    <li>Linux 技能树：ansible 自动化部署及运维、常用 shell 命令及脚本编写、docker 容器化技术</li>
+                    <li>Linux 技能树：ansible 自动化部署及运维、常用 shell 命令及脚本编写、docker 及 docker-compose 容器化技术</li>
                     <li>数据库技能树：常用 MySQL 作为 web 后端数据库，MongoDB 作为爬虫信息存储，Redis 用作缓存，熟悉常规的 CURD 操作</li>
                     <li>前端技能树：熟悉 HTML 基本规范，对 CSS 常规用法了解，JavaScript 主要使用 jQuery 库，熟悉 Bootstrap 框架，熟悉前端 SEO</li>
                     <li>博主 Github 地址：<a href="https://github.com/Hopetree"
@@ -59,7 +59,7 @@
                     <li>前端使用 Bootstrap4 + jQuery 支持响应式；图标使用 Font Awesome</li>
                     <li>后端 Python 3.5.2，Django 1.11.12，其他依赖查看源码中 requirements.txt</li>
                     <li>后台数据库使用 MySQL，缓存数据库使用 Redis</li>
-                    <li>网站部署使用 Nginx + gunicorn，之前使用的 Nginx + uwsgi</li>
+                    <li>网站部署使用 docker</li>
                     <li>bootstrap-admin 用于美化后台管理系统，变成响应式界面</li>
                     <li>django-allauth 等用于第三方用户登录</li>
                     <li>django-haystack 和 jieba 用于支持全文搜索</li>
