增加文章置顶字段

--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -13,6 +13,7 @@
                 {% get_user_avatar_tag article.author %}
                 <span>{{ article.author }}</span>
                 <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime }}</span>
+                {% if article.top_number %}<p class="float-right mr-2 text-danger">顶</p>{% endif %}
             </div>
             <h2 class="mt-0 font-weight-bold text-info f-17">
                 <a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a>
