--- a/apps/blog/templates/blog/about.html
+++ b/apps/blog/templates/blog/about.html
@@ -27,7 +27,7 @@
                 <hr style="margin: .1rem;dashed #333;"/>
                 <ul class="pl-4 ml-2">
                     <li>人生苦短，我用 Python！</li>
-                    <li>博主是2015年末开始自学 Python 的，在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，希望有机会成为真正的 Python 开发者</li>
+                    <li>博主是2015年末开始自学 Python 的，在第一次接触到 Python 的时候就爱上了这门编程语言，所以主攻 Python，顺带学习其他编程语言，目前从事的工作主要偏向于运维，主要使用 shell 和 Python</li>
                     <li>Python 技能树：Django/Flask 的 web 框架，requests/scrapy/selenium 为主的爬虫框架，正则表达式/CSS/Xpath/ 等信息提取方式，写过 PYQT5
                         的多线程 GUI 桌面应用， 使用过 Pandas 和 Numpy 做数据分析
                     </li>
