友盟设置到环境变量

--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -75,7 +75,7 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
         </p>
         <p class="mb-0">
             <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-3</a>
-            {{ cnzz_protocol }}
+            {{ cnzz_protocol|safe }}
         </p>
     </div>
 </footer>
