友盟设置到环境变量

--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -74,7 +74,7 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
             <a href="https://github.com/Hopetree" target="_blank" title="前往博主的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
         <p class="mb-0">
-            <a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-3</a>
+            <a href="http://www.miibeian.gov.cn/" target="_blank">{{ beian }}</a>
             {% if cnzz_protocol %}{{ cnzz_protocol|safe }}{% endif %}
         </p>
     </div>
