环境变量增加github

--- a/apps/blog/templates/blog/tags/base_right.html
+++ b/apps/blog/templates/blog/tags/base_right.html
@@ -10,7 +10,7 @@
     <div class="card-body px-0 pt-3 pb-1">
         <div class="row text-center">
             <div class="col">
-                <a href="https://github.com/Hopetree" target="_blank" title="进入博主的Github查看博客源码">
+                <a href="{{ my_github }}" target="_blank" title="进入博主的Github查看博客源码">
                     <img style="max-width:40px" alt="博主的github" src="{% static 'blog/img/github.png' %}">
                     <p class="mt-2">Github</p>
                 </a>
