环境变量增加github

--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -71,7 +71,7 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
 <footer class="container-fluid mt-4">
     <div class="card-body text-center px-0 f-16">
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-2018
-            <a href="https://github.com/Hopetree" target="_blank" title="前往博主的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
+            <a href="https://github.com/Hopetree" target="_blank" title="博客作者的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
         <p class="mb-0">
             <a href="http://www.miibeian.gov.cn/" target="_blank">{{ beian }}</a>
