--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -10,6 +10,7 @@
         </div>
         <div class="media-body">
             <div class="text-muted mb-2 f-12">
+                {% if article.is_top %}<p class="float-right mb-0"><span class="text-danger mx-2">置顶</span></p>{% endif %}
                 {% get_user_avatar_tag article.author %}
                 <span>{{ article.author }}</span>
                 <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime }}</span>
