工具表格响应式

--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -40,7 +40,7 @@
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
-    <div class="card-body push-result text-center py-3">结果显示区</div>
+    <div class="card-body table-responsive push-result text-center py-3">结果显示区</div>
 </div>
 <h3 class="mb-3 pl-2 title-info">推送结果参数解读：</h3>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
