--- a/apps/tool/templates/tool/link_test.html
+++ b/apps/tool/templates/tool/link_test.html
@@ -35,7 +35,7 @@
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">检测结果</div>
-    <div class="card-body push-result text-center p-0"><div class="p-3">结果显示区</div></div>
+    <div class="card-body table-responsive push-result text-center p-0"><div class="p-3">结果显示区</div></div>
 </div>
 <h3 class="mb-3 pl-2 title-info">检测结果参数解读：</h3>
 <table class="table">
