--- a/apps/tool/templates/tool/regex.html
+++ b/apps/tool/templates/tool/regex.html
@@ -29,7 +29,7 @@
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">匹配结果</div>
-    <div class="card-body push-result text-center p-3">结果显示区</div>
+    <div class="card-body table-responsive push-result text-center p-3">结果显示区</div>
 </div>
 {% endblock %}
 
