--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
           integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="http://cdn.bootcss.com/headroom/0.5.0/headroom.min.js"></script>
+    <script src="{% static 'blog/js/headroom.min.js'%}"></script>
     <!-- blog CSS -->
     <link href="{% static 'blog/css/base.css' %}?v=20171223.05" rel="stylesheet">
     {% block top-file %}{% endblock %}
