--- a/apps/blog/templates/blog/base.html
+++ b/apps/blog/templates/blog/base.html
@@ -70,7 +70,9 @@ if(msgs>0){var _record=0;var myTitle=document.title;function titleBlink(){_recor
 {% block end_file %}{% endblock %}
 <footer class="container-fluid mt-4">
     <div class="card-body text-center px-0 f-16">
-        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-2018
+        <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-<span id="year-info"></span>
+            <script>function getnewYear(){var d = new Date();var x = document.getElementById("year-info");
+            x.innerHTML=d.getFullYear();}getnewYear()</script>
             <a href="https://github.com/Hopetree" target="_blank" title="博客作者的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
         <p class="mb-0">
