--- a/apps/comment/templates/comment/comment_list.html
+++ b/apps/comment/templates/comment/comment_list.html
@@ -19,7 +19,7 @@
                         <small class="text-danger">[博主]</small>
                         {% endif %}
                     </p>
-                    <p class="small text-muted">{{ forloop.counter }}楼&nbsp;-&nbsp;{{ comment.create_date|naturaltime }}</p>
+                    <p class="small text-muted">{{ forloop.revcounter }}&nbsp;楼&nbsp;-&nbsp;{{ comment.create_date|naturaltime }}</p>
                 </div>
             </li>
             <div class="comment-body">{{ comment.content_to_markdown|safe }}</div>
